--- a/index.html
+++ b/index.html
@@ -7,8 +7,182 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
+    <script src="https://kit.fontawesome.com/988ff1373e.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+                <div class="col-6">
+                    <div class="d-flex flex-row align-items-center">
+                        <a class="navbar-brand" href="#">
+                            <img src="img/logo.png"  class="me-2" width="32" height="32"/>
+                            Discu'ton
+                        </a>
+                        <ul class="navbar-nav text-white">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Acceuil</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">A propos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="forum.html">Forum</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="d-flex justify-content-end float-end text-white">
+                        <a href="#" class="me-2 text-white"><i class="fa-solid fa-user"></i> Se connecter</a>
+                        <a href="#" class="text-white"><i class="fa-solid fa-user-pen"></i> S'inscrire</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <div class="container-fluid bg-discuton-primary p-0">
+        <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div id="Illustration-1" class="d-block Illustration w-100">
+                    <div class="position-absolute bottom-0 start-0 card text-center m-4" style="width: 30rem;">
+                        <div class="card-header">
+                            <p class="text-dark fw-bold fs-5 my-1">Rejoingez-nous!</p>
+                        </div>
+                        <div class="card-body">
+                            <p class="text-dark fs-6 my-1 mx-auto">
+                                Notre plate-forme est accessible et compte plus de <span class="fw-bold">250M</span> d'utilisateur !
+                            </p>
+                        </div>
+                      </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div id="Illustration-2" class="d-block Illustration w-100">
+                    <div class="position-absolute bottom-0 start-0 card text-center m-4" style="width: 30rem;">
+                        <div class="card-header">
+                            <p class="text-dark fw-bold fs-5 my-1">Des forums de discussion pour tout le monde !</p>
+                        </div>
+                        <div class="card-body">
+                            <p class="text-dark fs-6 my-1 mx-auto">
+                                Nous avons mis en place différents forum de discussion
+                                accessible à tous, à tout moment !
+                            </p>
+                        </div>
+                      </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div id="Illustration-3" class="d-block Illustration w-100">
+                    <div class="position-absolute top-0 end-0 card text-center m-4" style="width: 30rem;">
+                        <div class="card-header">
+                            <p class="text-dark fw-bold fs-5 my-1">+ 1000 Sujets différents !</p>
+                        </div>
+                        <div class="card-body">
+                            <p class="text-dark fs-6 my-1 mx-auto">
+                                Avec autant de sujets, rejoingez-nous maintenant !
+                            </p>
+                        </div>
+                      </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <div class="d-flex flex-row justify-content-center align-items-center flex-wrap py-4">
+            <div class="col-6 py-4">
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <img src="img/security.png" class="me-4" alt="Image d'illustration de la sécurisation de bout en bout" width="128" height="128"/>
+                    <div class="d-flex flex-column text-center" style="width: 32rem;">
+                        <p class="fw-bold fs-4">Une connexion sécurisée !</p>
+                        <p class="fs-5">
+                            Vos identifiants ne sont jamais communiqué,
+                            de plus nous utilisons la connexion sécurisé de bout-en-bout
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 py-4">
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <img src="img/sujet-tendance.png" class="me-4" alt="Image d'illustration de la sécurisation de bout en bout" width="128" height="128"/>
+                    <div class="d-flex flex-column text-center" style="width: 32rem;">
+                        <p class="fw-bold fs-4">Retrouvez des milliers de sujets tendances !</p>
+                        <p class="fs-5">
+                            Des centaines de nouvelles discussions sont crées chaque jour,
+                            nous sommes sur que vous trouverez chaussure à votre pied !
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 py-4">
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <img src="img/update.png" class="me-4" alt="Image d'illustration de la sécurisation de bout en bout" width="128" height="128"/>
+                    <div class="d-flex flex-column text-center" style="width: 32rem;">
+                        <p class="fw-bold fs-4">Mis à jour régulier !</p>
+                        <p class="fs-5">
+                            Nos équipes de développement mettent à jour notre plate-forme
+                            pour améliorer nos contenus, et votre sécurité !
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 py-4">
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <img src="img/teamwork.png" class="me-4" alt="Image d'illustration de la sécurisation de bout en bout" width="128" height="128"/>
+                    <div class="d-flex flex-column text-center" style="width: 32rem;">
+                        <p class="fw-bold fs-4">Une communautée activé !</p>
+                        <p class="fs-5">
+                            Notre communautée reste actifs, s'entre-aident 
+                            et nous donnes leurs opinions sur nos contenues, une aide précieuse pour nous améliorer !
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <button type="button" class="btn btn-primary rounded-4 fs-5 px-3 py-2">Voir les sujets du forum</button>
+        </div>
+    </div>
+
+    <footer class="bg-dark">
+        <div class="row">
+            <div class="col-6 text-white p-4">
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                    <p class="fs-4 fw-bold mb-2 w-50">LIENS ANNEXES</p>
+                    <ul class="fs-5 ps-0 w-50 mb-0">
+                        <li><a href="#" class="text-white">Acceuil</a></li>
+                        <li><a href="#" class="text-white">A propos</a></li>
+                        <li><a href="#" class="text-white">Forum</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-6 text-white p-4">
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                    <p class="fs-4 fw-bold mb-2 w-50">NOUS CONTACTER</p>
+                    <p class="fs-5 w-50 mb-0">150 Avenue John Doe</p>
+                    <p class="fs-5 w-50 mb-0">59000 Lille</p>
+                    <p class="fs-5 w-50 mb-0"><i class="fa-solid fa-phone me-2"></i>0320313233</p>
+                </div>
+            </div>
+        </div>
+        <div class="row text-center">
+            <p class="fs-6 text-white">© Discu'ton. Tous droits réservés</p>
+        </div>
+    </footer>
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
