--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="col-6">
                     <div class="d-flex flex-row align-items-center">
                         <a class="navbar-brand" href="#">
-                            <img src="img/logo.png"  class="me-2" width="32" height="32"/>
+                            <img src="img/logo.png"  class="me-2" width="32" alt="Logo Discu'ton" height="32"/>
                             Discu'ton
                         </a>
                         <ul class="navbar-nav text-white">
