--- a/forum.html
+++ b/forum.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="d-flex justify-content-end float-end text-white">
+                    <div class="d-flex justify-content-end float-end text-white" id="userForm">
                         <a href="#" class="me-2 text-white"><i class="fa-solid fa-user"></i> Se connecter</a>
                         <a href="#" class="text-white"><i class="fa-solid fa-user-pen"></i> S'inscrire</a>
                     </div>
