--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="d-flex justify-content-end float-end text-white">
+                    <div class="d-flex justify-content-end float-end text-white" id="userForm">
                         <a href="#" class="me-2 text-white" id="connectBtn"><i class="fa-solid fa-user"></i> Se connecter</a>
                         <a href="#" class="text-white" id="registerBtn"><i class="fa-solid fa-user-pen"></i> S'inscrire</a>
                     </div>
@@ -166,19 +166,18 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form class="modal-body" id="connectForm">
-                <div class="mb-4">
-                    <label for="exampleInput" class="form-label">Adresse e-mail :</label>
-                    <input type="email" class="form-control" id="exampleInput" aria-describedby="emailHelp" placeholder="abcdefg@xyz.fr">
-                    <div id="emailHelp" class="form-text">Nous ne partagerons jamais vos identifiants.</div>                    
+                <div class="mb-4" id="identifiantSectionConnect">
+                    <label for="identifiantInput" class="form-label">Identifiant :</label>
+                    <input type="text" class="form-control" id="identifiantInput" required>                  
                 </div>
-                <div class="mb-4">
-                    <label for="passwordInput" class="form-label">Mot de passe :</label>
-                    <input type="password" class="form-control" id="passwordInput">                    
+                <div class="mb-4" id="passwordSectionConnect">
+                    <label for="passwordInputConnect" class="form-label">Mot de passe :</label>
+                    <input type="password" class="form-control" id="passwordInputConnect" required>                    
                 </div>
             </form>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
-              <button type="button" class="btn btn-primary">Confirmer</button>
+              <button type="button" class="btn btn-primary" id="sendConnectForm">Confirmer</button>
             </div>
           </div>
         </div>
@@ -191,15 +190,15 @@
               <h5 class="modal-title" id="registerModalLabel"><i class="fa-solid fa-user-pen me-2"></i>- S'inscrire</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form class="modal-body" onsubmit="registerNewUser()" id="registerForm">
+            <form class="modal-body" id="registerForm">
                 <div class="row mb-3">
                     <div class="col" id="firstNameSectionRegister">
                         <label for="firstName" class="form-label">Prénom :</label>
-                        <input type="text" class="form-control" id="firstNameRegister" placeholder="John">
+                        <input type="text" class="form-control" id="firstNameRegister" placeholder="John" required>
                       </div>
                       <div class="col" id="lastNameSectionRegister">
                         <label for="lastName" class="form-label">Nom :</label>
-                        <input type="text" class="form-control" id="lastNameRegister" placeholder="Doe">
+                        <input type="text" class="form-control" id="lastNameRegister" placeholder="Doe" required>
                       </div>                    
                 </div>
                 <div class="mb-3" id="pseudoSectionRegister">
@@ -228,15 +227,13 @@
                     <input type="email" class="form-control" id="mailInputRegister" aria-describedby="emailHelp" placeholder="abcdefg@xyz.fr" required>
                     <div id="emailHelp" class="form-text">Nous ne partagerons jamais vos identifiants.</div>
                 </div>
-                <div class="mb-3">
+                <div class="mb-3" id="passwordSectionRegister">
                     <label for="passwordInputRegister" class="form-label">Mot de passe :</label>
-                    <input type="password" class="form-control" id="passwordInputRegister" placeholder="*********" required>
-                </div>
-                <div class="mb-3">
+                    <input type="password" class="form-control mb-3" id="passwordInputRegister" placeholder="*********" required>
                     <label for="confirmPasswordInput" class="form-label">Confirmation votre mot de passe :</label>
                     <input type="password" class="form-control" id="confirmPasswordInputRegister" placeholder="*********" required>
                 </div>
-                <div class="mb-3">
+                <div class="mb-3" id="ageSectionRegister">
                     <label for="ageInput" class="form-label">Votre âge :</label>
                     <input type="number" class="form-control" id="ageInputRegister" placeholder="22" min="1" max="135">
                 </div>
@@ -244,12 +241,11 @@
                     <label for="cityInput" class="form-label">Votre ville :</label>
                     <input type="text" class="form-control" id="cityInputRegister" placeholder="Lille">
                 </div>
-
-                <div class="d-flex flex-row justify-content-end mb-2">
-                    <button type="button" class="btn btn-secondary me-2" data-bs-dismiss="modal">Fermer</button>
-                    <button type="submit" class="btn btn-primary">Confirmer</button>
-                </div>
             </form>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary me-2" data-bs-dismiss="modal">Fermer</button>
+                <button type="submit" class="btn btn-primary" id="registerSendForm">Confirmer</button>
+            </div>
           </div>
         </div>
     </div>
